color-scheme-doc setting the example-text to inline-block to solve wrapping issue

--- a/src/app/color-schemes-doc/color-scheme-doc/color-scheme-doc.component.scss
+++ b/src/app/color-schemes-doc/color-scheme-doc/color-scheme-doc.component.scss
@@ -24,6 +24,7 @@
   }
 
   &__example-text {
+    display: inline-block;
     padding: 0.5rem;
 
     &:first-of-type {
